# c3po

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  components.json  docker-compose.yml  eslint.config.js  jsrepo.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
.claude/: TASK_TEMPLATE.md  settings.local.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  noxfile.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251122_2242-ab74b57a2cf3_initial_migration.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  redis.py
backend/app/api/: __init__.py  appointments.py  auth.py  users.py
backend/app/models/: __init__.py  appointment.py  user.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  user.py
backend/app/services/: __init__.py  cache.py  email.py
backend/app/utils/: __init__.py  rate_limit.py  security.py
backend/scripts/: __init__.py  seed.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_health.py
docs/: WSL2-SETUP.md  architecture.md  backend-plan.md  components.md  contributing.md  style-guide.md  testing.md
scripts/: dev-tmux.sh  stop-dev.sh
src/: app.css  app.d.ts  app.html  hooks.server.ts
src/lib/components/features/login-avatar/: login-avatar.svelte
src/lib/components/ui/mode-watcher-toggle/: mode-watcher-toggle.svelte
src/lib/components/widgets/nav-bar/: index.ts  nav-bar.svelte
src/lib/entities/appointment/: index.ts
src/lib/entities/nav-bar/: routes.ts
src/lib/features/appointment/: index.ts
src/lib/features/calendar/: index.ts
src/lib/features/calender/: index.ts
src/lib/features/login-avatar/: index.ts
src/lib/pages/home-page/: index.ts
src/lib/pages/login-page/: index.ts
src/lib/pages/planner/: index.ts
src/lib/pages/store/: routes.ts
src/lib/shared/: utils.ts
src/lib/shared/api/: appointments.ts  auth.ts
src/lib/shared/config/: api.ts  locale.ts
src/lib/shared/event-functions/: debounce.ts
src/lib/shared/lib/: demo-appointments.ts  index.ts  time-utils.ts  use-scroll-sync.svelte.ts
src/lib/shared/types/: appointment.ts  auth.ts  icon.ts  index.ts  service.ts
src/lib/shared/utils/: pointer-events.ts
src/lib/widgets/calendar-navigation/: index.ts
src/lib/widgets/day-schedule/: README.md  index.ts
src/lib/widgets/login-form/: index.ts  login-form.svelte
src/lib/widgets/nav-bar/: index.ts  nav-bar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/(auth)/: +layout.svelte  +page.svelte
src/routes/(public)/: +layout.svelte
src/routes/(public)/login/: +page.server.ts
src/routes/login/: +layout.svelte  +page.svelte
src/routes/logout/: +server.ts
src/routes/planner/: +page.svelte
src/test/: setup.ts
tests/: calendar-navigation.spec.ts
(+150 files in other folders)
